--- a/Lyncas.Api/LyncasApi/Properties/launchSettings.json
+++ b/Lyncas.Api/LyncasApi/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56949",
+      "applicationUrl": "http://localhost:60383",
       "sslPort": 0
     }
   },
@@ -16,14 +16,15 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Lyncas.Api": {
+    "LyncasApi": {
       "commandName": "Project",
-      "launchUrl": "weatherforecast",
+      "launchBrowser": false,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "http://localhost:6000;https://localhost:6001"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
